--- a/portfolio.css
+++ b/portfolio.css
@@ -263,19 +263,49 @@ button{
 /* portfolio */
 .portfolio_wrapper .card{
     height: 100%;
+    position: relative;
     min-height: 350px;
     overflow: hidden;
     border: 1px solid var(--bg-white);
     cursor: pointer;
     box-shadow: 0 0 16px 4px var(--bg-dark-blue);
 }
-.portfolio_wrapper .card span{
+
+/* .portfolio_wrapper .card:hover{
+    background: linear-gradient(rgba(233, 242, 247, 0.1), skyblue);
+
+} */
+.portfolio_wrapper .card img{
     transition: background-position 4s ease-in-out 0s;
     width: 100%;
     height: 100%;
     background-position: top center;
     background-size: cover;
 }
+.portfolio_wrapper h4{
+    /* margin-top: 5rem; */
+}
+.portfolio_wrapper h4 a{
+    /* position: relative; */
+    margin: 1rem 10rem;
+    color: #fff;
+}
+.portfolio_wrapper h4 a:hover{
+    color: var(--primary-color);
+}
+/* .portfolio_wrapper .card button{
+    position: absolute;
+    margin-bottom: 2em;
+
+    padding: .5em .5em;
+    letter-spacing: 1rem;
+    text-transform: uppercase;
+    color: white;
+    text-decoration: none;
+    background: var(--bg-dark-blue);
+    border: none;
+    border-radius: 10px;
+} */
 
 /* contact */
 .contact_wrapper .call_details{
